# LibraryAPI

./: pyproject.toml
apis/: serializers.py  tests.py  urls.py  views.py
books/: tests.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/templates/books/: book_list.html
libraryAPI/: asgi.py  settings.py  urls.py  wsgi.py
